--- a/index.html
+++ b/index.html
@@ -8,15 +8,30 @@
 </head>
 <body>
     <header>
-        <button class="header-button">SAM'S PORTFOLIO</button>
-        <button class="header-button">ABOUT ME</button>
-        <button class="header-button">CONTACT</button>
+        <button class="header-button active" id="portfolio-button">SAM'S PORTFOLIO</button>
+        <button class="header-button" id="about-me-button">ABOUT ME</button>
+        <button class="header-button" id="contact-button">CONTACT</button>
+        <img src="images/header-icon.png" alt="Icon" class="header-icon" id="header-icon">
     </header>
     <div class="vinyl-collection">
         <!-- <div class="vinyl-container">
             <div class="vinyl-cover"></div>
             <div class="vinyl"></div>
         </div> -->
+    </div>
+    <div class="text-box" id="text-box" style="display: none;">
+        <p>
+        I am an aspiring architectural student currently enrolled at Ngee Ann Polytechnic, with a keen 
+        enthusiasm for the field. I enjoy experimenting with various architectural forms and emerging 
+        technologies in my projects, always striving to achieve excellence. My dedication pushes me to 
+        invest my utmost effort into my work. Apart from academics, I thoroughly enjoy experimenting with 
+        parametric design in Grasshopper and engaging in sports.
+        </p>
+    </div>
+    <div class="about-me-text" id="about-me-text" style="display: none;">
+        <p>
+        Recognitions
+        </p>
     </div>
     <script src="scripts.js"></script>
 </body>
